--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -53,8 +53,30 @@ p {
 /* max-width: 600px (anything less than 600px)*/
 /* min-width: 600px (anything more than 600px*/
 /* Mobile devices (320px - 480px) */
-@media (max-width: 480px) {
-   
+@media (max-width: 1024px) {
+   .Section{
+    flex-direction: row;
+    flex-wrap: wrap;
+   }
+
+   .mid-section{
+    flex-direction: row;
+    flex-wrap: wrap;
+   }
+
+   .middle-main-name{
+    margin-bottom: 3%;
+   }
+
+   .reduction{
+    flex-wrap: wrap;
+   }
+
+   .Predictive{
+    flex-wrap: wrap;
+   }
+
+
 }
 
 /* iPads/Tablets (481px - 1024px) */
