--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,7 +6,8 @@ body {
 .gridIdea {
     display: grid;
     grid-template-columns: 1fr 0.4fr;
-    height: auto; 
+    min-height: 100vh; 
+    height: auto;
     width: 100%;
     gap: 10px;
 }
@@ -33,10 +34,6 @@ body {
     margin-top: 5%;
     width: 300px;
     height: auto;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 5px solid black;
-    overflow: hidden;
 }
 
 .photo img {
@@ -45,14 +42,8 @@ body {
     object-fit: cover;
 }
 
-
 .name {
-    margin-top: 4%;
-    font-weight: bolder;
-}
-
-.occupation {
-    margin: 0;
+    margin-top: 0%;
     font-weight: bolder;
 }
 
